k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pet-tracker-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pet-tracker-backend
  template:
    metadata:
      labels:
        app: pet-tracker-backend
    spec:
      nodeSelector:
        role: backend
      containers:
        - name: backend
          image: url/pet-tracker-backend:latest
          ports:
            - containerPort: 80
