k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pet-tracker-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pet-tracker-frontend
  template:
    metadata:
      labels:
        app: pet-tracker-frontend
    spec:
      nodeSelector:
         role: frontend
      containers:
        - name: frontend
          image: url/pet-tracker-frontend:latest
          ports:
            - containerPort: 80
