k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: pet-tracker-backend
spec:
  type: LoadBalancer
  selector:
    app: pet-tracker-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
