k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: pet-tracker-frontend
spec:
  type: LoadBalancer
  selector:
    app: pet-tracker-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
